syntax = "proto3";

package com.reactnativerust;

option java_generic_services = true;

message AddRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message AddResponse {
  int32 result = 1;
}

service MathService {
  rpc Add(AddRequest) returns (AddResponse);
  rpc Minus(AddRequest) returns (AddResponse);
}